--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="{% static "app.css" %}">
+    <link rel="shortcut icon" type="image/png" href="{% static "images/favicon.ico" %}">
     {% block css_files %}{% endblock %}
 </head>
 <body>
