--- a/blog/templates/blog/includes/post.html
+++ b/blog/templates/blog/includes/post.html
@@ -3,12 +3,15 @@
 <li>
     <article class="post">
         <a href="{% url "post-details" post.slug %}">
-            <img src="{% static "blog/images/"|add:post.image %}" alt="{{ post.title }}" />
+            <img src="{% static "blog/images/"|add:post.image_name %}" alt="{{ post.title }}" />
             <div class="post__content">
                 <h3>{{ post.title }}</h3>
                 <p>
                     {{ post.excerpt }}
                 </p>
+                <h2>
+                    {{ post.tag.all.0 }}
+                </h2>
             </div>
         </a>
     </article>
