--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -25,9 +25,12 @@
 
         <ul>
             {% for post in posts %}
+            {% if forloop.counter < 4 %}
                 {% include "blog/includes/post.html" %}
+            {% endif %}
             {% endfor %}
         </ul>
+
         
     </section>
         
