--- a/blog/static/blog/post-detail.css
+++ b/blog/static/blog/post-detail.css
@@ -1,62 +1,163 @@
 body {
     background-color: #e7e7e7;
-  }
-  
-  #main-navigation {
-    background-color: #390281;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
-  }
-  
-  #summary {
-    margin: 8rem auto 3rem auto;
-    padding: 2rem;
-    width: 90%;
-    max-width: 90rem;
-    border-radius: 16px;
-    background-color: #5706c0;
-    position: relative;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
-    height: 22rem;
-  }
-  
-  #summary h2 {
-    color: white;
-    font-size: 4.5rem;
-  }
-  
-  #summary article {
-    position: absolute;
-    top: 2rem;
-    right: 3rem;
-    padding: 1rem 2rem;
-    border-radius: 12px;
-    text-align: right;
-    color: white;
-  }
-  
-  #summary article img {
-    width: 12rem;
-    height: 12rem;
-    border-radius: 12px;
-    transform: rotateZ(5deg);
-    border: 5px solid white;
-    margin-bottom: 1rem;
-  }
-  
-  #summary address {
-    font-weight: bold;
-  }
-  
-  #summary time {
-    font-weight: bold;
-  } 
-  
-  main {
-    width: 90%;
-    max-width: 90rem;
-    margin: 3rem auto;
-    background-color: white;
-    padding: 1rem;
-    border-radius: 12px;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
-  }
+}
+
+#main-navigation {
+  background-color: #390281;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+}
+
+#summary {
+  margin: 8rem auto 3rem auto;
+  padding: 2rem;
+  width: 90%;
+  max-width: 90rem;
+  border-radius: 16px;
+  background-color: #5706c0;
+  position: relative;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+  height: 22rem;
+}
+
+#summary h2 {
+  color: white;
+  font-size: 4.5rem;
+  margin-bottom: 1rem;
+}
+
+#summary article {
+  position: absolute;
+  top: 2rem;
+  right: 3rem;
+  padding: 1rem 2rem;
+  border-radius: 12px;
+  text-align: right;
+  color: white;
+}
+
+#summary article img {
+  width: 12rem;
+  height: 12rem;
+  border-radius: 12px;
+  transform: rotateZ(5deg);
+  border: 5px solid white;
+  margin-bottom: 1rem;
+}
+
+#summary address {
+  font-weight: bold;
+}
+
+#summary a {
+  color: rgb(156, 145, 250);
+  text-decoration: none;
+}
+
+#summary time {
+  font-weight: bold;
+} 
+
+#summary div span {
+  font-weight: bold;
+  font-size: x-large;
+  background-color: white;
+  color: #390281;
+  padding: 0.5rem 0.75rem ;
+  border-radius: 8px;
+}
+
+
+main {
+  width: 90%;
+  max-width: 90rem;
+  margin: 3rem auto;
+  background-color: white;
+  padding: 1rem;
+  border-radius: 12px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+}
+
+#comment-form p {
+  font-weight: bold;
+  font-size: 1.25rem;
+  text-align: center;
+}
+
+#comment-form {
+  margin: 3rem auto;
+  width: 90%;
+  max-width: 40rem;
+  border-radius: 12px;
+  background-color: white;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+  padding: 1rem;
+}
+
+#comment-form button {
+  font: inherit;
+  background-color: #390281;
+  color: white;
+  border: 1px solid #390281;
+  padding: 0.5rem 1.5rem;
+  border-radius: 6px;
+  cursor: pointer;
+}
+
+#comment-form button:hover,
+#comment-form button:active {
+  color: #390281;
+  font-weight: bold;
+  background-color: white;
+}
+
+.form-control {
+  margin-bottom: 1rem;
+}
+
+.form-control label {
+  font-weight: bold;
+  margin-bottom: 0.5rem;
+  display: block;
+}
+
+.form-control input,
+.form-control textarea {
+  display: block;
+  width: 100%;
+  font: inherit;
+  padding: 0.25rem;
+  border-radius: 6px;
+  border: 1px solid #ccc;
+}
+
+#all-comments {
+  text-align: center;
+  background-color: #e7e7e7;
+  font: inherit;
+  border-radius: 12px;
+  width: 100%;
+}
+
+#all-comments h2 {
+  font-size: xx-large;
+  color: #20014a;
+}
+
+#all-comments div {
+  margin: 1.5rem auto;
+  display: block;
+  background-color: white;
+  max-width: 50rem;
+  padding: 1rem;
+  border-radius: 75px;
+}
+
+#all-comments div span {
+  color: #20014a;
+  font-weight: bold;
+}
+
+#all-comments div p {
+  color: #b681ff;
+  font-weight: bold;
+}
