--- a/blog/templates/blog/includes/post.html
+++ b/blog/templates/blog/includes/post.html
@@ -1,17 +1,12 @@
-{% load static %}
-
 <li>
     <article class="post">
         <a href="{% url "post-details" post.slug %}">
-            <img src="{% static "blog/images/"|add:post.image_name %}" alt="{{ post.title }}" />
+            <img src="{{ post.image.url }}" alt="{{ post.title }}" />
             <div class="post__content">
                 <h3>{{ post.title }}</h3>
                 <p>
                     {{ post.excerpt }}
                 </p>
-                <h2>
-                    {{ post.tag.all.0 }}
-                </h2>
             </div>
         </a>
     </article>
