--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,7 @@
         <h1><a href="{% url "index" %}">Harry's Blog</a></h1>
         <nav>
             <a href="{% url "posts"%}">All Posts</a>
+            <a href="{% url "read-later"%}">Stored Posts</a>
         </nav>
     </header>
     {% block content %} {% endblock %}
