--- a/blog/static/blog/post-detail.css
+++ b/blog/static/blog/post-detail.css
@@ -66,6 +66,26 @@ body {
   border-radius: 8px;
 }
 
+#read-later {
+  margin: 2rem 0;
+}
+
+#read-later button {
+  background-color: transparent;
+  border: 2px solid white;
+  padding: 0.5rem 2rem;
+  font: inherit;
+  color: white;
+  border-radius: 6px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+#read-later button:hover,
+#read-later button:active {
+  background-color: white;
+  color: #390281;
+}
 
 main {
   width: 90%;
