--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -17,7 +17,7 @@
             <h2>HARALAMBI'S BLOG</h2>
         </header>
         <p>Hi, I am Harry and I love programming,
-             improving and all fitness related stuff!</p>
+             improving and all fitness-related aspects in general!</p>
     </section>
 
     <section id="latest-posts">
@@ -34,9 +34,11 @@
         
     <section id="about">
         <h2>About Me</h2>
-        <p>I love programming, fitness, self-improvement and tehcnologies in general!</p>
-        <p>Some of my goals include continuous improvement professionally and personally,</p>
-        <p>while others focus on fulfilling relationships and hobbies.</p>
+        <p>I love programming, fitness, self-improvement and tehcnologies in general!<br><br>
+            I am currently working as a Software Developer @Strypes.<br><br>
+            Some of my goals include continuous improvement professionally and<br><br>
+            personally,while others focus on fulfilling relationships and hobbies.
+        </p>
             
     </section>
 {% endblock  %}
